helm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fas54-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fas54
  template:
    metadata:
      labels:
        app: fas54
    spec:
      containers:
      - name: fas54
        image: "fas54:latest"
        ports:
        - containerPort: 8080
