helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fas54-ingress
spec:
  rules:
  - host: fas54
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fas54
            port:
              number: 80
